# travelagent

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci-pip.yml  ci-uv.yml  ci.yml
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_workflow.py
tests/unit/: test_main.py  test_models.py  test_parallel_agents.py
travelagent/: __init__.py  main.py  models.py  parallel_agents.py
